--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,6 +5,8 @@
             color: white;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             touch-action: none;
+            -webkit-user-select: none;
+            user-select: none;
         }
 
         #canvas-container {
